code anywhere went down so i've transfered everything to VS code Studio

--- a/sustainability.html
+++ b/sustainability.html
@@ -77,7 +77,7 @@
       <div class="container-fluid hero-img-sustainability"></div>
     </header>
     <section class="sustainability-section">
-      <div class="row p-5 text-center justify-content-center">
+      <div class="row text-center justify-content-center">
         <div class="col-12 col-lg-6 sustainability-section">
           <h1>Sustainability</h1>
           <p>
