--- a/who-are-we.html
+++ b/who-are-we.html
@@ -82,68 +82,51 @@
     <!--portrait section-->
     <section class="who-are-we-section">
       <div class="container">
+        <div class="row text-center">
+          <div class="col-12 text-center meet-the-team">
+            <h1>Meet the team</h1>
+            <p>
+              The Senior Leadership Team excels through a blend of bold action
+              and determination, bringing their unique strengths, character, and
+              a touch of humor to everyone they interact with. As a
+              award-winning team, we're privileged to assist our amazing clients
+              with their travel requirements and are committed to surpassing
+              expectations in this endeavor.
+            </p>
+          </div>
+        </div>
         <div class="row justify-content-center mt-4 mb-5">
-          <div class="col-12 col-md-4 col-lg-3 ceo-img staff-member">
-            <img
-              src="assets/images/ceo.jpeg"
-              alt="Image of the CEO"
-              class="staff-portrait"
-            />
+          <div class="col-12 col-md-4 col-lg-3 ceo-img staff-member m-5">
             <div class="staff-names">
               <h5>Victoria Grayson</h5>
               <p>CEO</p>
             </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3 cfo-img staff-member">
-            <img
-              src="assets/images/cfo.jpeg"
-              alt="Image of the CFO"
-              class="staff-portrait"
-            />
+          <div class="col-12 col-md-4 col-lg-3 cfo-img staff-member m-5">
             <div class="staff-names">
               <h5>Conrad Grayson</h5>
               <p>CFO</p>
             </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3 hoops-img staff-member">
-            <img
-              src="assets/images/head-of-ops.jpg"
-              alt="Image of the Head of Operations"
-              class="staff-portrait"
-            />
+          <div class="col-12 col-md-4 col-lg-3 hoops-img staff-member m-5">
             <div class="staff-names">
               <h5>Aiden Mathis</h5>
               <p>Head of Operations</p>
             </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3 hoaacc-img staff-member">
-            <img
-              src="assets/images/head-of-accounts.jpeg"
-              alt="Image of the Head of Accounts"
-              class="staff-portrait"
-            />
+          <div class="col-12 col-md-4 col-lg-3 hoaacc-img staff-member m-5">
             <div class="staff-names">
               <h5>Emily Thorne</h5>
               <p>Head of Accounts</p>
             </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3 hoacc-man-ing staff-member">
-            <img
-              src="assets/images/head-of-account-managment.jpeg"
-              alt="Image of the Head of Account Management"
-              class="staff-portrait"
-            />
+          <div class="col-12 col-md-4 col-lg-3 hoacc-man-img staff-member m-5">
             <div class="staff-names">
               <h5>Ashley Davenport</h5>
               <p>Head of Account Management</p>
             </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3 hocom staff-member">
-            <img
-              src="assets/images/head-of-commerrcials.jpeg"
-              alt="Image of the Head of Commercials"
-              class="staff-portrait"
-            />
+          <div class="col-12 col-md-4 col-lg-3 hocom-img staff-member m-5">
             <div class="staff-names">
               <h5>David Clark</h5>
               <p>Head of Commercials</p>
@@ -155,8 +138,8 @@
     <!--our visioin and values section-->
     <section class="our-vision-section">
       <div class="container">
-        <div class="row">
-          <div class="col-12 col-lg-6 vision-section">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-8 text-center vision-section">
             <h3>Our Vision</h3>
             <p>
               Our vision is to become the epitome of innovation in business
@@ -170,14 +153,14 @@
             </p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-6 offset-lg-6">
+        <div class="row justify-content-center pb-5">
+          <div class="col-lg-10">
             <div class="row">
-              <div class="col-12 col-lg-6 values-section">
+              <div class="col-12 text-center values-section">
                 <h3>Our Values</h3>
               </div>
-              <div class="row">
-                <div class="col-12 col-lg-6 values-content">
+              <div class="row justify-content-center">
+                <div class="col-12 col-lg-6 text-center values-content">
                   <p>
                     Customer-Centricity: Prioritizing the needs and preferences
                     of our clients, we are dedicated to delivering personalized
@@ -185,26 +168,34 @@
                     experience is tailored to individual requirements.
                   </p>
                 </div>
-                <div class="col-12 col-lg-6 values-content">
+                <div class="col-12 col-lg-6 text-center values-content">
+                  <p>
+                    Collaboration: Believing in the power of teamwork and
+                    partnership, we work closely with our clients, suppliers,
+                    and colleagues to create mutually beneficial relationships
+                    and achieve shared goals in the realm of business travel.
+                  </p>
+                </div>
+                <div class="col-12 col-lg-6 text-center values-content">
+                  <p>
+                    Excellence: Consistently striving for the highest quality in
+                    every aspect of our service, from client interaction to the
+                    execution of travel plans, ensuring unparalleled expertise
+                    and attention to detail.
+                  </p>
+                </div>
+                <div class="col-12 col-lg-6 text-center values-content">
                   <p>
                     Innovation: Continuously seeking out and adopting the latest
                     advancements in travel technology and services to provide
                     cutting-edge solutions that enhance the travel experience.
                   </p>
                 </div>
-                <div class="col-12 col-lg-6 values-content">
+                <div class="col-12 col-lg-6 text-center values-content">
                   <p>
                     Integrity: Upholding the highest standards of honesty and
                     transparency in all our dealings, fostering trust and
                     long-lasting relationships with our clients and partners.
-                  </p>
-                </div>
-                <div class="col-12 col-lg-6 values-content">
-                  <p>
-                    Collaboration: Believing in the power of teamwork and
-                    partnership, we work closely with our clients, suppliers,
-                    and colleagues to create mutually beneficial relationships
-                    and achieve shared goals in the realm of business travel.
                   </p>
                 </div>
               </div>
