--- a/contact-us.html
+++ b/contact-us.html
@@ -23,6 +23,7 @@
       Hudson Business Travel | Navigating Your Corporate Travel World
     </title>
   </head>
+  <body>
   <header>
     <div class="container-fluid sticky-top nav-menu">
       <!--navigation menu section -->
@@ -75,30 +76,56 @@
       </nav>
     </div>
     <!--Hero Image-->
-    <div class="container-fluid hero-img">
-      <div class="row hero-content">
-        <div class="col-6 justify-content-end">
-          <!--Question section-->
-          <div class="question-container">
-            <h1 class="question-section text-end">
-              Looking for a new travel management company?
-            </h1>
-            <!--Button to contact us-->
-            <div class="div d-grid-2 d-md-flex justify-content-md-end">
-              <a
-                href="#"
-                class="btn btn-lg question-button bt-end"
-                type="button"
-                >Contact Us</a
-              >
+    <div class="container-fluid hero-contact-us-img">
+     
+    </div>
+  </header>
+<section>
+  <div class="container-fluid bgc-contact ">
+    <div class="row">
+      <div class="col">
+        <h1 class="text-center">Contact Us</h1>
+        <div class="center-form">
+          <form action="/submit-form" method="post">
+            
+            <!-- Name Field -->
+            <div class="form-group mb-4"></div>
+            <input type="text" class="form-control" id="name" name="name" placeholder="Name:" required>
             </div>
-          </div>
+            <!-- Type of Enquiry Dropdown -->
+            <div class="form-group mb-4"></div>
+            <select name="enquiry-type" class="form-select" id="enquiryType">
+                <option selected>Type of Enquiry</option>
+                <option value="new-business">New Business Enquiry</option>
+                <option value="existing-client">Existing Client</option>
+                <option value="supplier">I'm a Supplier</option>
+                <option value="employee">Work for Hudson Business Travel</option>
+            </select>
+            </div>
+            <!-- Email Field -->
+            <div class="form-group mb-4 mt-4">
+            <input type="email" class="form-control" id="email" name="email" placeholder="Emaill Address:" required>
+            </div>
+            <!-- Contact Number Field -->
+            <div class="form-group mb-4">
+            <input type="tel" class="form-control" id="contactNumber" name="contactNumber" placeholder="Contact number:">
+            </div>
+            <!-- Text Input Box (Message) -->
+            <div class="form-group mb-4">
+            <textarea id="message" class="form-control" name="message" rows="10" cols="50" placeholder="Your Message:"></textarea>
+            </div>
+            <!-- Submit Button -->
+            <div class="form-group mb-4">
+            <button class="btn btn-primary" type="submit">Submit</button>
+            </div>
+        </form>
         </div>
       </div>
     </div>
-  </header>
-
-  <body></body>
+  </div>
+  
+</section>
+  
   <footer>
     <!--Footer section-->
     <div class="container-fluid">
@@ -157,4 +184,10 @@
       </div>
     </div>
   </footer>
+  <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+</body>
 </html>
