updated readme change hero img on what we do and created media query for contact us

--- a/contact-us.html
+++ b/contact-us.html
@@ -84,7 +84,7 @@
 <section>
   <div class="container-fluid ">
     <div class="row justify-content-center pt-5 pb-5">
-      <div class="col-lg-4 contact-section">
+      <div class="col-12 col-lg-4 contact-section">
         <h1 class="text-center">Contact Us</h1>
         <div class="center-form">
           <form action="/submit-form" method="post">
@@ -129,7 +129,7 @@
   </div>
   <div class="container">
     <div class="row justify-content-center address-section">
-      <div class="col-lg-4 address">
+      <div class=" col-12 col-lg-4 address">
         <h5>Location:</h5>
         <p>WeWork - Office Space & Coworking</p>
         <p>7th Floor</p>
@@ -139,10 +139,10 @@
         <p class="phone">Phone: <span>+44 (0) 20 3695 7895</span></p>
         <p>Email: action@hudsontravel.co.uk</p>
       </div>
-      <div class="col-lg-4">
+      <div class="col-12 col-lg-4 map-section">
         <iframe
-        width="400"
-        height="220"
+        width="300"
+        height="180"
         style="border:0"
         loading="lazy"
         src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDlieRU7tvJy4k73vlgbHfKDdczU6n4l0g&q=WeWork+Office+Space+Coworking,120+Moorgate,London,EC2M+6UR">
